<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".ui.TransactionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/keyboard_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".60" />

            <EditText
                android:id="@+id/transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dimen"
                android:background="@drawable/border_background"
                android:hint="@string/title_hint"
                android:maxLines="1"
                android:padding="@dimen/medium_dimen"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/value_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dimen"
                android:background="@drawable/border_background"
                android:hint="@string/value_hint"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/medium_dimen"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transaction_title"
                tools:ignore="AutoFill,LabelFor" />

            <LinearLayout
                android:id="@+id/transaction_switch_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_small"
                android:layout_margin="@dimen/medium_dimen"
                android:background="@drawable/border_background"
                android:orientation="horizontal"
                android:padding="@dimen/tiny_dimen"
                app:layout_constraintEnd_toEndOf="@id/value_box"
                app:layout_constraintStart_toStartOf="@id/value_box"
                app:layout_constraintTop_toBottomOf="@+id/value_box">

                <TextView
                    android:id="@+id/switch_income"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/income"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/medium_text"/>

                <TextView
                    android:id="@+id/switch_expense"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/expense"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_dimen"
                android:background="@drawable/ripple_background"
                android:padding="@dimen/medium_dimen"
                android:text="@string/submit"
                android:textColor="@color/gray"
                android:textSize="@dimen/medium_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>